--- a/app/Views/home/index.phtml
+++ b/app/Views/home/index.phtml
@@ -1,1 +1,8 @@
-<h1>Hello world!</h1>
+<div class="container py-5">
+    <div class="row justify-content-center">
+       <div class="custom-file w-25">
+           <input id="file-input" class="custom-file-input" type="file" name="file">
+           <label for="file-input" class="custom-file-label">Upload de arquivo</label>
+       </div>
+    </div>
+</div>
