--- a/app/Views/home/index.phtml
+++ b/app/Views/home/index.phtml
@@ -1,8 +1,32 @@
 <div class="container py-5">
-    <div class="row justify-content-center">
-       <div class="custom-file w-25">
-           <input id="file-input" class="custom-file-input" type="file" name="file">
-           <label for="file-input" class="custom-file-label">Upload de arquivo</label>
-       </div>
+    <div class="row justify-content-center mb-3">
+        <a href="/">Home</a>
     </div>
+
+    <form id="file-form" method="post" action="/load-file" enctype="multipart/form-data">
+        <div class="row justify-content-center">
+            <div class="custom-file w-25">
+                <input id="file-input" class="custom-file-input" type="file" name="file">
+                <label id="file-input-label" for="file-input" class="custom-file-label">
+                    <?= $this->view->fileName ?? 'Upload de arquivo' ?>
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary ml-3">Enviar</button>
+        </div>
+    </form>
+
+    <?php if ($this->view->error) { ?>
+    <div class="alert alert-<?=$this->view->error->type?> mt-5" role="alert">
+        <strong>Ops! </strong><?=$this->view->error->message?>
+    </div>
+    <?php } ?>
 </div>
+
+<style>
+    #file-input-label {
+        width: 250px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+</style>
